webapp/tasks/python-capital-if/python-errors.txt
  File "/Users/eddie/Programming/oq/webapp/tasks/python-capital-if/main.py", line 2
    If (input == "s3cr37"): print("You are in!")
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: illegal target for annotation
